# stacc-assignment

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  create_model.py  data_understanding.ipynb  docker-compose.yml  docker_init.sh  load_data.py  main.py  pyproject.toml
src/: create_model.py  load_data.py  main.py
