[project]
name = "stacc-assignment"
version = "0.1.0"
description = "Simple API that predicts an iris's species based on measurements"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "skops>=0.13.0",
    "sqlalchemy>=2.0.43",
]
